--- a/Journal/Rapport/Kapitler/Kravspecifikation.tex
+++ b/Journal/Rapport/Kapitler/Kravspecifikation.tex
@@ -11,8 +11,16 @@ Foreløbig er intentionen at projektet opdeles i tre særskilte del:\\
 	
 \end{enumerate}
 \section{User case diagram}
+Følgende use case diagram beskriver, projektets aktører i relation til de enkelte use cases, der foreløbigt er tiltænkt projektet.
+
+\section{Aktørbeskrivelse}
+\subsubsection*{Admin}
+\subsubsection*{Testperson}
+\subsubsection*{Udvikler}
 
 \section{Fully dressed use cases}
+I dette afsnit findes detaljerede beskrivelser af projektets use cases, dog er disse ikke fuldstændig gennemarbejdet, da stadig er en vis usikkerhed om projektets endelig.
+\\Særlig use case 5 og 6 er illustrative   
 \subsection{UC 1 - Indsaml datasæt}
 \begin{table}[h]
 	\begin{tabular}{|p{5cm}|p{9cm}|}
