osse noget projekt plan

--- a/Journal/Rapport/Kapitler/Kravspecifikation.tex
+++ b/Journal/Rapport/Kapitler/Kravspecifikation.tex
@@ -20,9 +20,9 @@ Følgende use case diagram beskriver, projektets aktører i relation til de enke
 
 \section{Fully dressed use cases}
 I dette afsnit findes detaljerede beskrivelser af projektets use cases, dog er disse ikke fuldstændig gennemarbejdet, da stadig er en vis usikkerhed om projektets endelig.
-\\Særlig use case 5 og 6 er illustrative   
+\\ \\Særlig use case 5 og 6 er illustrative og beskriver den generelle idé om at genkendelse programmet bør kunne implementeres og anvendes i tredjeparts software.
 \subsection{UC 1 - Indsaml datasæt}
-\begin{table}[h]
+\begin{table}[htbp] 
 	\begin{tabular}{|p{5cm}|p{9cm}|}
 		\hline
 		\textbf{Navn} & Indsaml dataset \\ \hline
@@ -44,7 +44,7 @@ I dette afsnit findes detaljerede beskrivelser af projektets use cases, dog er d
 \end{enumerate}
 
 \subsection{UC 2 - Tilføj ny bevægelsestype}
-\begin{table}[h]
+\begin{table}[htbp] 
 	\begin{tabular}{|p{5cm}|p{9cm}|}
 		\hline
 		\textbf{Navn} & Tilføj ny bevægelsestype \\ \hline
@@ -66,7 +66,7 @@ I dette afsnit findes detaljerede beskrivelser af projektets use cases, dog er d
 \end{enumerate}
 
 \subsection{UC 3 - Slet datasæt}
-\begin{table}[h]
+\begin{table}[htbp] 
 	\begin{tabular}{|p{5cm}|p{9cm}|}
 		\hline
 		\textbf{Navn} & Slet datasæt \\ \hline
@@ -85,8 +85,7 @@ I dette afsnit findes detaljerede beskrivelser af projektets use cases, dog er d
 \end{enumerate}
 
 \subsection{UC 4 - Verificering af ML genkendelse}
-
-\begin{table}[h]
+\begin{table}[htbp] 
 	\begin{tabular}{|p{5cm}|p{9cm}|}
 		\hline
 		\textbf{Navn} & Verificering af ML genkendelse \\ \hline
@@ -112,9 +111,9 @@ I dette afsnit findes detaljerede beskrivelser af projektets use cases, dog er d
 		\end{enumerate}
 	\end{enumerate}
 \end{enumerate}
-
+\clearpage
 \subsection{UC 5 - Anvendelse af bevægelsesgenkendelse}
-\begin{table}[h]
+\begin{table}[htbp] 
 	\begin{tabular}{|p{5cm}|p{9cm}|}
 		\hline
 		\textbf{Navn} & Anvendelse af bevægelsesgenkendelse \\ \hline
@@ -133,7 +132,7 @@ I dette afsnit findes detaljerede beskrivelser af projektets use cases, dog er d
 \end{enumerate}
 
 \subsection{UC 6 - Genkendelse af bevægelse}
-\begin{table}[h]
+\begin{table}[htbp] 
 	\begin{tabular}{|p{5cm}|p{9cm}|}
 		\hline
 		\textbf{Navn} & Genkendelse af bevægelse  \\ \hline
