--- a/Journal/Rapport/Kapitler/Projektplan.tex
+++ b/Journal/Rapport/Kapitler/Projektplan.tex
@@ -1,6 +1,7 @@
 \thispagestyle{fancy}
 \chapter{Projektplan}
 \subsection*{Evt. eksperimenter}
+Herunder er en liste af undersøgelser, der kan være interessante at lave i forbindelse med projektet.
 \begin{itemize}
 	\item Hvor meget kalibrering er nødvendigt?
 	\begin{itemize}
@@ -16,6 +17,17 @@
 	\end{itemize}
 	\item Kan personer genkendes
 	\begin{itemize}
-		\item Undersøgelse af data indsamlet fra flere personer kan skælne mellem hver person ud fra deres bevægelse.
+		\item Undersøgelse af data indsamlet fra flere personer kan skelne mellem hver person ud fra deres bevægelse.
 		\end{itemize}
 \end{itemize}
+
+\subsection*{Teknologier}
+Herunder findes en liste over relevante teknologier el.lign. der muligvis kan anvendes i projektet
+\begin{itemize}
+	\item Artificial neural network
+	\item Google Cloud Computing
+	\item Microsoft Azure - Machine Learning
+	\item Parse.com
+	\item Unity
+\end{itemize}
+
