Theme color og Kontekstdiagram
Theme color ændret fra rød til orange.
kontekstdiagram tilføjet
Undersøgelses afsnit slettet

--- a/Journal/Rapport/Kapitler/Kravspecifikation.tex
+++ b/Journal/Rapport/Kapitler/Kravspecifikation.tex
@@ -7,9 +7,11 @@ Foreløbig er intentionen at projektet opdeles i tre særskilte del:\\
 \begin{enumerate}
 	\item En dataopsamlings del, hvor data kan opsamles, organiseres og glemmes, så det kan anvendes af de øvrige dele af projektet
 	\item En machine-lerning-del, hvor den indsamlede data processeres. Videre skal der i denne del være mulighed for at begrænse, hvilke dele af den indsamlede data, der processeres
-	\item En form for SDK-del, der kan anvendes i software, hvor der er behov for håndbevægelsesgenkendelse
-	
+	\item En form for SDK-del, der kan anvendes i software, hvor der er behov for håndbevægelsesgenkendelse	
 \end{enumerate}
+
+\section{Kontekstdiagram}
+\includegraphics[width=1\textwidth]{kontekstdiagram}
 \section{User case diagram}
 Følgende use case diagram beskriver, projektets aktører i relation til de enkelte use cases, der foreløbigt er tiltænkt projektet.
 
