material osv. + teknologier

--- a/Journal/Rapport/Kapitler/Projektplan.tex
+++ b/Journal/Rapport/Kapitler/Projektplan.tex
@@ -31,3 +31,20 @@ Herunder findes en liste over relevante teknologier el.lign. der muligvis kan an
 	\item Unity
 \end{itemize}
 
+\subsection*{Relevante kilder}
+Herunder er en liste med interessante online kurser. Videre forventes det, at yderligere materiale, som bøger og artikler kan findes gennem AU Library, \href{http://library.au.dk/materialer/}{http://library.au.dk/materialer/}
+\begin{itemize}
+	\item E-kursus i Artificial intelligence
+		\begin{itemize}
+			\item \href{https://www.udacity.com/course/intro-to-artificial-intelligence--cs271}{https://www.udacity.com/course/intro-to-artificial-intelligence--cs271}
+			\item \href{https://www.udacity.com/course/knowledge-based-ai-cognitive-systems--ud409}{https://www.udacity.com/course/knowledge-based-ai-cognitive-systems--ud409}
+		\end{itemize}
+	\item E-kursus i machine learning
+		\begin{itemize}
+			\item \href{https://www.udacity.com/course/intro-to-machine-learning--ud120}{https://www.udacity.com/course/intro-to-machine-learning--ud120}
+			\item \href{https://www.udacity.com/course/machine-learning--ud262}{https://www.udacity.com/course/machine-learning--ud262}
+		\end{itemize}
+
+\end{itemize}
+
+
