Forsidebillede og underskrift
Billeder added og linjer til underskrift også added

--- a/Journal/Rapport/Styles/forside.tex
+++ b/Journal/Rapport/Styles/forside.tex
@@ -5,7 +5,7 @@
 
 \definecolor{titlepagecolor}{cmyk}{1,.60,0,.40}
 
-\DeclareFixedFont{\bigsf}{T1}{phv}{b}{n}{1.5cm}
+\DeclareFixedFont{\bigsf}{T1}{phv}{b}{n}{1.2cm}
 
 \backgroundsetup{
 scale=1,
@@ -21,13 +21,21 @@ contents={\begin{tikzpicture}[remember picture,overlay]
 \makeatother
 \author{%
 20104172, Lasse Bue Svendsen \\
+\vspace*{0.35cm}
+\underline{\hspace{5.5cm}}
+\\
 \vspace*{0.75cm}
 201270860, Kristoffer Sloth Gade \\
+\vspace*{0.35cm}
+\underline{\hspace{5.5cm}}
+\\
 
 
 
-\vspace*{0.75cm}
+\vspace*{2cm}
 Vejleder: Peter Ahrendt
+\vspace*{0.35cm}
+\underline{\hspace{5.5cm}}
 }
 
 
