--- a/Journal/Rapport/Kapitler/Kravspecifikation.tex
+++ b/Journal/Rapport/Kapitler/Kravspecifikation.tex
@@ -7,18 +7,21 @@ Foreløbig er intentionen at projektet opdeles i tre særskilte del:\\
 \begin{enumerate}
 	\item En dataopsamlings del, hvor data kan opsamles, organiseres og glemmes, så det kan anvendes af de øvrige dele af projektet
 	\item En machine-lerning-del, hvor den indsamlede data processeres. Videre skal der i denne del være mulighed for at begrænse, hvilke dele af den indsamlede data, der processeres
-	\item En form for SDK-del, der kan anvendes i software, hvor der er behov for håndbevægelsesgenkendelse	
+	\item En form for SDK-del, der kan anvendes i software, hvor der er behov for håndbevægelsesgenkendelse
+	
 \end{enumerate}
-
-\section{Kontekstdiagram}
-\includegraphics[width=1\textwidth]{kontekstdiagram}
 \section{User case diagram}
 Følgende use case diagram beskriver, projektets aktører i relation til de enkelte use cases, der foreløbigt er tiltænkt projektet.
 
 \section{Aktørbeskrivelse}
 \subsubsection*{Admin}
+I dette system er Admin en person, der optager og gemmer ny bevægelsesdata og giver machine learning algoritmen adgang til den. Videre kan Admin modificere på algoritmen.
+
 \subsubsection*{Testperson}
+En Testperson i dette system, bærer et Myo armbånd, som er forbundet til en computer el.lign.   
+
 \subsubsection*{Udvikler}
+En udvikler er, i dette system en softwareudvikler, som anvender håndbevægelsesgenkendelse i egen software.  
 
 \section{Fully dressed use cases}
 I dette afsnit findes detaljerede beskrivelser af projektets use cases, dog er disse ikke fuldstændig gennemarbejdet, da stadig er en vis usikkerhed om projektets endelig.
