--- a/Journal/Rapport/Kapitler/Konklusion.tex
+++ b/Journal/Rapport/Kapitler/Konklusion.tex
@@ -1,3 +1,21 @@
 \thispagestyle{fancy}
 \chapter{Konklusion}
 \label{chp:konklusion}
+Gennem bachelorforbedrelsen er 6 foreløbige use case blevet identificeret. De er:
+\begin{itemize}
+	\item Indsaml datasæt
+	\item Tilføj ny bevægelsestype
+	\item Slet datasæt
+	\item Verificering af ML genkendelse
+	\item Anvendelse af bevægelsesgenkendelse
+	\item Genkendelse af bevægelse
+\end{itemize}
+
+I disse 6 use cases er de følgende 3 aktører identificeret:
+\begin{itemize}
+	\item Admin
+	\item Testperson
+	\item Udvikler
+\end{itemize}
+
+Yderligere er der fundet en række teknologier og relevant materiale til indledende research.
