--- a/Journal/Rapport/Kapitler/Kravspecifikation.tex
+++ b/Journal/Rapport/Kapitler/Kravspecifikation.tex
@@ -10,22 +10,8 @@ Foreløbig er intentionen at projektet opdeles i tre særskilte del:\\
 	\item En form for SDK-del, der kan anvendes i software, hvor der er behov for håndbevægelsesgenkendelse
 	
 \end{enumerate}
-
-\section{Kontekstdiagram}
-\begin{figure}[h!]
-	\centering
-	\includegraphics[width=1\textwidth]{kontekstdiagram}
-	\caption{Kontekstdiagram}
-\end{figure}
-
-
 \section{User case diagram}
-Følgende use case diagram beskriver, projektets aktører i relation til de enkelte use cases, der foreløbigt er tiltænkt projektet.\\
-\begin{figure}[h!]
-	\centering
-	\includegraphics[width=0.8\textwidth]{UseCaseDiagram}
-		\caption{Use Case Diagram}
-\end{figure}
+Følgende use case diagram beskriver, projektets aktører i relation til de enkelte use cases, der foreløbigt er tiltænkt projektet.
 
 \section{Aktørbeskrivelse}
 \subsubsection*{Admin}
@@ -35,7 +21,7 @@ I dette system er Admin en person, der optager og gemmer ny bevægelsesdata og g
 En Testperson i dette system, bærer et Myo armbånd, som er forbundet til en computer el.lign.   
 
 \subsubsection*{Udvikler}
-En udvikler er, i dette system en softwareudvikler, som anvender håndbevægelsesgenkendelse i egen software.  
+En udvikler ( eller softwareudvikler ) er, i dette system en softwareudvikler, som anvender håndbevægelsesgenkendelse i egen software.  
 
 \section{Fully dressed use cases}
 I dette afsnit findes detaljerede beskrivelser af projektets use cases, dog er disse ikke fuldstændig gennemarbejdet, da stadig er en vis usikkerhed om projektets endelig.
@@ -44,7 +30,7 @@ I dette afsnit findes detaljerede beskrivelser af projektets use cases, dog er d
 \begin{table}[htbp] 
 	\begin{tabular}{|p{5cm}|p{9cm}|}
 		\hline
-		\textbf{Navn} & Indsaml dataset \\ \hline
+		\textbf{Navn} & Indsaml datasæt \\ \hline
 		\textbf{Use case ID} & U1 \\ \hline
 		\textbf{initiering} & Admin initierer denne use case \\ \hline
 		\textbf{Aktører} & Admin (Primær Aktør ) \\ & Testperson (Sekundær aktør) \\ \hline
