--- a/Journal/Rapport/Kapitler/Projektplan.tex
+++ b/Journal/Rapport/Kapitler/Projektplan.tex
@@ -1,6 +1,6 @@
 \thispagestyle{fancy}
 \chapter{Projektplan}
-\section{Evt. eksperimenter}
+\subsection*{Evt. eksperimenter}
 Herunder er en liste af undersøgelser, der kan være interessante at lave i forbindelse med projektet.
 \begin{itemize}
 	\item Hvor meget kalibrering er nødvendigt?
@@ -21,7 +21,7 @@ Herunder er en liste af undersøgelser, der kan være interessante at lave i for
 		\end{itemize}
 \end{itemize}
 
-\section{Teknologier}
+\subsection*{Teknologier}
 Herunder findes en liste over relevante teknologier el.lign. der muligvis kan anvendes i projektet
 \begin{itemize}
 	\item Artificial neural network
@@ -31,7 +31,7 @@ Herunder findes en liste over relevante teknologier el.lign. der muligvis kan an
 	\item Unity
 \end{itemize}
 
-\section{Relevante kilder}
+\subsection*{Relevante kilder}
 Herunder er en liste med interessante online kurser. Videre forventes det, at yderligere materiale, som bøger og artikler kan findes gennem AU Library, \href{http://library.au.dk/materialer/}{http://library.au.dk/materialer/}
 \begin{itemize}
 	\item E-kursus i Artificial intelligence
