--- a/Journal/Rapport/Kapitler/Kravspecifikation.tex
+++ b/Journal/Rapport/Kapitler/Kravspecifikation.tex
@@ -10,8 +10,22 @@ Foreløbig er intentionen at projektet opdeles i tre særskilte del:\\
 	\item En form for SDK-del, der kan anvendes i software, hvor der er behov for håndbevægelsesgenkendelse
 	
 \end{enumerate}
+
+\section{Kontekstdiagram}
+\begin{figure}[h!]
+	\centering
+	\includegraphics[width=1\textwidth]{kontekstdiagram}
+	\caption{Kontekstdiagram}
+\end{figure}
+
+
 \section{User case diagram}
-Følgende use case diagram beskriver, projektets aktører i relation til de enkelte use cases, der foreløbigt er tiltænkt projektet.
+Følgende use case diagram beskriver, projektets aktører i relation til de enkelte use cases, der foreløbigt er tiltænkt projektet.\\
+\begin{figure}[h!]
+	\centering
+	\includegraphics[width=0.8\textwidth]{UseCaseDiagram}
+	\caption{Use Case Diagram}
+\end{figure}
 
 \section{Aktørbeskrivelse}
 \subsubsection*{Admin}
