tekst til kontekstdiagram

--- a/Journal/Rapport/Kapitler/Kravspecifikation.tex
+++ b/Journal/Rapport/Kapitler/Kravspecifikation.tex
@@ -15,16 +15,17 @@ Foreløbig er intentionen at projektet opdeles i tre særskilte del:\\
 \begin{figure}[h!]
 	\centering
 	\includegraphics[width=1\textwidth]{kontekstdiagram}
-	\caption{Kontekstdiagram}
+	\caption{Kontekstdiagram }
+	\label{fighrj}
 \end{figure}
-
+To af projektets tre dele adskilles i kontekstdiagrammet af en stiplet linje, nemlig dataopsamlingsdelen og anvendelsesdelen. Derudover ses machine-learning-delen i toppen af figuren, og er forbundet til de to øvrige dele. Machine-learning-delen er  ansvarlig for at kende forskellige håndbevægelser, og kan derved melde hvilke bevægelser der er opfanget, til software der bruger den. Derudover lærer Machine-learing-delen nye bevægelser vha. dataopsamlings-delen.
 
 \section{User case diagram}
 Følgende use case diagram beskriver, projektets aktører i relation til de enkelte use cases, der foreløbigt er tiltænkt projektet.\\
 \begin{figure}[h!]
 	\centering
 	\includegraphics[width=0.8\textwidth]{UseCaseDiagram}
-	\caption{Use Case Diagram}
+	\caption{Systemets Use Case Diagram}
 \end{figure}
 
 \section{Aktørbeskrivelse}
