Rettet theme color og sideskift

--- a/Journal/Rapport/Kapitler/Kravspecifikation.tex
+++ b/Journal/Rapport/Kapitler/Kravspecifikation.tex
@@ -103,7 +103,7 @@ I dette afsnit findes detaljerede beskrivelser af projektets use cases, dog er d
 	\item Admin vælger eksisterende datasæt.
 	\item Admin trykker på knap for at slette valgte datasæt.
 \end{enumerate}
-
+\newpage
 \subsection{UC 4 - Verificering af ML genkendelse}
 \begin{table}[htbp] 
 	\begin{tabular}{|p{5cm}|p{9cm}|}
@@ -132,7 +132,6 @@ I dette afsnit findes detaljerede beskrivelser af projektets use cases, dog er d
 	\end{enumerate}
 \end{enumerate}
 
-\clearpage
 \subsection{UC 5 - Anvendelse af bevægelsesgenkendelse}
 \begin{table}[htbp] 
 	\begin{tabular}{|p{5cm}|p{9cm}|}
@@ -152,6 +151,7 @@ I dette afsnit findes detaljerede beskrivelser af projektets use cases, dog er d
 	\item Softwareudvikleren anvender SDK til bevægelsesgenkendelse
 \end{enumerate}
 
+\newpage
 \subsection{UC 6 - Genkendelse af bevægelse}
 \begin{table}[htbp] 
 	\begin{tabular}{|p{5cm}|p{9cm}|}
