--- a/Journal/Rapport/Rapport.tex
+++ b/Journal/Rapport/Rapport.tex
@@ -89,7 +89,8 @@
 \usepackage{xcolor} % farver kan indsætttes i henhold til RGB med definecolor
 
 %Valg af temafarve % Denne farve bruges i chapterstyle %
-\definecolor{ThemeColor}{RGB}{224, 32, 28}
+%\definecolor{ThemeColor}{RGB}{224, 32, 28} %red
+\definecolor{ThemeColor}{RGB}{255,110,0} %orange
 
 
 % Valg af font %
