--- a/Journal/Rapport/Kapitler/Konklusion.tex
+++ b/Journal/Rapport/Kapitler/Konklusion.tex
@@ -1,7 +1,7 @@
 \thispagestyle{fancy}
 \chapter{Konklusion}
 \label{chp:konklusion}
-Gennem bachelorforbedrelsen er 6 foreløbige use case blevet identificeret. De er:
+Gennem bachelorforbedrelsen er seks foreløbige use case blevet identificeret. De er:
 \begin{itemize}
 	\item Indsaml datasæt
 	\item Tilføj ny bevægelsestype
@@ -10,7 +10,7 @@ Gennem bachelorforbedrelsen er 6 foreløbige use case blevet identificeret. De e
 	\item Anvendelse af bevægelsesgenkendelse
 	\item Genkendelse af bevægelse
 \end{itemize}
-I disse 6 use cases er de følgende 3 aktører identificeret:
+I disse seks use cases er de følgende tre aktører identificeret:
 \begin{itemize}
 	\item Admin
 	\item Testperson
