--- a/Journal/Rapport/Kapitler/Kravspecifikation.tex
+++ b/Journal/Rapport/Kapitler/Kravspecifikation.tex
@@ -2,10 +2,10 @@
 \chapter{Kravspecifikation}
 I denne del af bachelor-forbedrelsesjournalen vil projektets foreløbige funktionelle krav blive gennemgået. Kravene, der her bliver gennemgået, skal ses som midlertidige udkast, da projektets mål ikke er endeligt fastlagt.
 \\ \\
-I projektets context diagram vil systems overordnede struktur blive beskrevet. \\
-Foreløbig er intentionen at projektet opdeles i tre særskilte del:\\
+I projektets kontekstdiagram vil systemets overordnede struktur blive beskrevet. \\
+Foreløbig er intentionen at projektet opdeles i tre særskilte dele:\\
 \begin{enumerate}
-	\item En dataopsamlings del, hvor data kan opsamles, organiseres og glemmes, så det kan anvendes af de øvrige dele af projektet
+	\item En dataopsamlingsdel, hvor data kan opsamles, organiseres og glemmes, så det kan anvendes af de øvrige dele af projektet
 	\item En machine-lerning-del, hvor den indsamlede data processeres. Videre skal der i denne del være mulighed for at begrænse, hvilke dele af den indsamlede data, der processeres
 	\item En form for SDK-del, der kan anvendes i software, hvor der er behov for håndbevægelsesgenkendelse
 	
@@ -24,11 +24,12 @@ To af projektets tre dele adskilles i kontekstdiagrammet af en stiplet linje, ne
 Følgende use case diagram beskriver, projektets aktører i relation til de enkelte use cases, der foreløbigt er tiltænkt projektet.\\
 \begin{figure}[h!]
 	\centering
-	\includegraphics[width=0.8\textwidth]{UseCaseDiagram}
+	\includegraphics[width=0.75\textwidth]{UseCaseDiagram}
 	\caption{Systemets Use Case Diagram}
 \end{figure}
 
 \section{Aktørbeskrivelse}
+Heunder gennemgåes systemts identificerede aktører.
 \subsubsection*{Admin}
 I dette system er Admin en person, der optager og gemmer ny bevægelsesdata og giver machine learning algoritmen adgang til den. Videre kan Admin modificere på algoritmen.
 
@@ -49,17 +50,16 @@ I dette afsnit findes detaljerede beskrivelser af projektets use cases, dog er d
 		\textbf{Use case ID} & U1 \\ \hline
 		\textbf{initiering} & Admin initierer denne use case \\ \hline
 		\textbf{Aktører} & Admin (Primær Aktør ) \\ & Testperson (Sekundær aktør) \\ \hline
-		\textbf{samtigdige forekomster} & - \\ \hline
 		\textbf{Prækondition} & Testperson har Myo båndet på og dataindsamlings software kører \\ \hline
-		\textbf{Postkondition} & Data set er indsamlet \\ \hline
+		\textbf{Postkondition} & Datasæt er indsamlet \\ \hline
 	\end{tabular}
 \end{table}
 \textbf{Hovedscenarie}
 \begin{enumerate}
 	\item Admin trykker på knap på at starte for at starte dataindsamlingen.
-	\item Testpersonen laver håndtegn.
-	\item Admin trykker på knap for at stoppe dataindsamlingen, når håndtegnsbevægelsen er slut.
-	\item Admin vælger, hvilken bevægelsestype der er blevet indsamlet og angiver hvem testperson.
+	\item Testpersonen laver håndbevægelse.
+	\item Admin trykker på knap for at stoppe dataindsamlingen, når håndbevægelsen er slut.
+	\item Admin vælger, hvilken bevægelsestype der er blevet indsamlet og angiver hvem testpersonen er.
 	\item Admin trykker på knap for at gemme datasættet.
 \end{enumerate}
 
@@ -71,17 +71,15 @@ I dette afsnit findes detaljerede beskrivelser af projektets use cases, dog er d
 		\textbf{Use case ID} & U2 \\ \hline
 		\textbf{initiering} & Admin initierer denne use case \\ \hline
 		\textbf{Aktører} & Admin (Primær Aktør ) \\ \hline
-		\textbf{samtigdige forekomster} & - \\ \hline
 		\textbf{Prækondition} & Dataindsamlings softwaren kører \\ \hline
-		\textbf{Postkondition} & En ny bevægelsestype er tilføjet til Dataindsamlings softwaren \\ \hline
+		\textbf{Postkondition} & En ny bevægelsestype er tilføjet til Dataindsamlingssoftwaren \\ \hline
 	\end{tabular}
 \end{table}
 \textbf{Hovedscenarie}
 \begin{enumerate}
 	\item Admin trykker på knap for at tilføje ny bevægelsestype.
-	\item Admin angiver title for den nye bevægelsestype.
-	\item Admin tildeler evt. farve til den nye bevægelsestype.
-	\item Admin vælger, hvilken bevægelsestype der er blevet indsamlet og angiver hvem testperson.
+	\item Admin angiver titel for den nye bevægelsestype.
+	\item Admin vælger, hvilken bevægelsestype der er blevet indsamlet og angiver hvem testpersonen er.
 	\item Admin trykker på knap for at gemme bevægelsestypen.
 \end{enumerate}
 
@@ -93,7 +91,6 @@ I dette afsnit findes detaljerede beskrivelser af projektets use cases, dog er d
 		\textbf{Use case ID} & U3 \\ \hline
 		\textbf{initiering} & Admin initierer denne use case \\ \hline
 		\textbf{Aktører} & Admin (Primær Aktør ) \\ \hline
-		\textbf{samtigdige forekomster} & - \\ \hline
 		\textbf{Prækondition} & Et datasæt skal eksistere \\ \hline
 		\textbf{Postkondition} & Datasæt er slettet \\ \hline
 	\end{tabular}
@@ -112,7 +109,6 @@ I dette afsnit findes detaljerede beskrivelser af projektets use cases, dog er d
 		\textbf{Use case ID} & U4 \\ \hline
 		\textbf{initiering} & Admin initierer denne use case \\ \hline
 		\textbf{Aktører} & Admin (Primær Aktør ) \\ \hline
-		\textbf{samtigdige forekomster} & - \\ \hline
 		\textbf{Prækondition} & ML har kategoriseret bevægelse \\ \hline
 		\textbf{Postkondition} & Admin har varificeret kategorisering  \\ \hline
 	\end{tabular}
@@ -138,17 +134,16 @@ I dette afsnit findes detaljerede beskrivelser af projektets use cases, dog er d
 		\hline
 		\textbf{Navn} & Anvendelse af bevægelsesgenkendelse \\ \hline
 		\textbf{Use case ID} & U5 \\ \hline
-		\textbf{initiering} & Softwareudvikleren initierer denne use case \\ \hline
-		\textbf{Aktører} & Softwareudvikleren (Primær Aktør ) \\ \hline
-		\textbf{samtigdige forekomster} & - \\ \hline
-		\textbf{Prækondition} & Softwareudvikleren har bevægelsesgenkendelses SDK\\ \hline
-		\textbf{Postkondition} & Softwareudvikleren har anvendt bevægelsesgenkendelsen\\ \hline
+		\textbf{initiering} & Udvikleren initierer denne use case \\ \hline
+		\textbf{Aktører} & Udvikleren (Primær Aktør ) \\ \hline
+		\textbf{Prækondition} & Udvikleren har bevægelsesgenkendelses SDK\\ \hline
+		\textbf{Postkondition} & Udvikleren har anvendt bevægelsesgenkendelsen\\ \hline
 	\end{tabular}
 \end{table}
 \textbf{Hovedscenarie}
 \begin{enumerate}
-	\item Softwareudvikleren implementerer SDK i egen software
-	\item Softwareudvikleren anvender SDK til bevægelsesgenkendelse
+	\item Udvikleren implementerer SDK i egen software
+	\item Udvikleren anvender SDK til bevægelsesgenkendelse
 \end{enumerate}
 
 \newpage
@@ -159,9 +154,8 @@ I dette afsnit findes detaljerede beskrivelser af projektets use cases, dog er d
 		\textbf{Navn} & Genkendelse af bevægelse  \\ \hline
 		\textbf{Use case ID} & U6 \\ \hline
 		\textbf{initiering} & Testpersonen initierer denne use case \\ \hline
-		\textbf{Aktører} & Testperson (Primær Aktør )\\ & Softwareudvikler (Sekundær aktør) \\ \hline
-		\textbf{samtigdige forekomster} & - \\ \hline
-		\textbf{Prækondition} & Testperson har Myo bånd på, som er forbundet til softwareudviklerens software \\ \hline
+		\textbf{Aktører} & Testperson (Primær Aktør )\\ & Udvikler (Sekundær aktør) \\ \hline
+		\textbf{Prækondition} & Testperson har Myo bånd på, som er forbundet til Udviklerens software \\ \hline
 		\textbf{Postkondition} & Håndbevægelse er blevet genkendt\\ \hline
 	\end{tabular}
 \end{table}
@@ -169,7 +163,7 @@ I dette afsnit findes detaljerede beskrivelser af projektets use cases, dog er d
 \begin{enumerate}
 	\item Testperson laver håndbevægelse
 	\item Myo-data sendes til softwareudviklerens software på computer el.lign.
-	\item Softwareudviklerens software processer Myo-data
+	\item Udviklerens software processer Myo-data
 	\item Myo-data genkendes
 	\item Testpersonens håndbevægelse genkendes
 \end{enumerate}
