Lækker og al ting!

--- a/Journal/Rapport/Kapitler/Kravspecifikation.tex
+++ b/Journal/Rapport/Kapitler/Kravspecifikation.tex
@@ -40,7 +40,7 @@ En Testperson i dette system, bærer et Myo armbånd, som er forbundet til en co
 En udvikler ( eller softwareudvikler ) er, i dette system en softwareudvikler, som anvender håndbevægelsesgenkendelse i egen software.  
 
 \section{Fully dressed use cases}
-I dette afsnit findes detaljerede beskrivelser af projektets use cases, dog er disse ikke fuldstændig gennemarbejdet, da stadig er en vis usikkerhed om projektets endelig.
+I dette afsnit findes detaljerede beskrivelser af projektets use cases, dog er disse ikke fuldstændig gennemarbejdet, da der stadig er en vis usikkerhed om projektets endelige mål.
 \\ \\Særlig use case 5 og 6 er illustrative og beskriver den generelle idé om at genkendelse programmet bør kunne implementeres og anvendes i tredjeparts software.
 \subsection{UC 1 - Indsaml datasæt}
 \begin{table}[htbp] 
@@ -163,7 +163,7 @@ I dette afsnit findes detaljerede beskrivelser af projektets use cases, dog er d
 \begin{enumerate}
 	\item Testperson laver håndbevægelse
 	\item Myo-data sendes til softwareudviklerens software på computer el.lign.
-	\item Udviklerens software processer Myo-data
+	\item Bevægelsesgenkendelsessoftware processer Myo-data
 	\item Myo-data genkendes
 	\item Testpersonens håndbevægelse genkendes
 \end{enumerate}
