--- a/Journal/Rapport/Kapitler/Projektplan.tex
+++ b/Journal/Rapport/Kapitler/Projektplan.tex
@@ -9,11 +9,11 @@ Herunder er en liste af undersøgelser, der kan være interessante at lave i for
 	\end{itemize}
 	\item Hvor mange sensorer er nødvendige?
 	\begin{itemize}
-		\item Undersøgelse af hvor lidt sensorer man kan nøjes med at bruge og stadig få brugbare dataset fra armbåndet.
+		\item Undersøgelse af hvor få sensorer man kan nøjes med at bruge og stadig få brugbare dataset fra armbåndet.
 	\end{itemize}
 	\item Kan bevægelser genkendes på tværs af personer?
 	\begin{itemize}
-		\item Undersøgelse af om den indsamlede data er generisk på tværs af personer. vil dene enkelte bevægelse kunne genkænden fra én person til en anden.
+		\item Undersøgelse af om den indsamlede data er generisk på tværs af personer. Vil den enkelte bevægelse kunne genkendes fra én person til en anden.
 	\end{itemize}
 	\item Kan personer genkendes
 	\begin{itemize}
@@ -28,7 +28,7 @@ Herunder findes en liste over relevante teknologier el.lign. der muligvis kan an
 	\item Google Cloud Computing
 	\item Microsoft Azure - Machine Learning
 	\item Parse.com
-	\item Unity
+	\item Unity - VR
 \end{itemize}
 
 \subsection*{Relevante kilder}
